atualizações no meu landding page

--- a/teste de landing page/index.html
+++ b/teste de landing page/index.html
@@ -8,16 +8,27 @@
     <title>TS PRODUÇÕES</title>
 </head>
 <body>
-    <div class="sidebar">
-        <div class="sidebar-pos">
-            <div class="imagem">
-                <img src="imagem/tony.jpeg">
+        <div class="sidebar">
+            <div class="sidebar-pos">
+                <div class="imagem">
+                    <img src="imagem/tony.jpeg">
+            
+            </div>
+            <div class="menu">
+                <a class="select" href="#"
+                target="_self">Sobre</a>
+                <a href="#" target="_self">Experiência</a>
             </div>
         </div>
-        <div class="menu">
-            <a class="select" href="#"
-            target="_self">Sobre</a>
-            <a href="#" target="_self">Experiência</a>
+        <div class="content">
+            <h1>TONY DE <span>SOUZA</span></h1>
+            <h3>Profissonal em Telecomunicações - Criador do Canal <a href="https://www.youtube.com/c/BIBLIOLOGIA/videos" target="_blank"> Bibliologia</a> - Operador de audio</h3>
+            <p>Iniciei minha carreira como Telecomunicador  na Rádio O Dia 1440 AM em Setembro de 1996, passando pelas radios: Boas Novas 1320 , Difusora de Caixias. AM, Bandeirantes 1360, FmM 105, Record 1900 AM, Tropical 104,5 entre outras, desde então nunca mais parei. Hoje com um canal com cerca de 17,3 mil inscritos, venho produzindos videos de alta qualidade, apesar adorar faze-los, vejo os tambem como um trabalho extra!  </p>
+           <div class="icons-social">     
+                <a href="https://www.facebook.com/tonnidesouzaa"  target="_blank"><img src="icons/facebook-brands.svg"></a>
+                <a href="https://wa.me/5519993705460?text=Ol%C3%A1+esta+dispon%C3%ADvel+%3F+" target="_blank"><img src="icons/whatsapp-square-brands.svg"></a>
+                <a href="https://www.youtube.com/c/BIBLIOLOGIA" target="_blank"><img src="icons/youtube-brands.svg"></a>
+           </div>
         </div>
     </div>
 </body>
